<?xml version="1.0"?>
<package format="3">
  <name>reasonplan_rby1_adapter</name>
  <version>0.1.0</version>
  <description>ROS 2 adapter that converts ReasonPlan planning trajectory text into RB-Y1 /cmd_vel commands.</description>
  <maintainer email="alsgh000118@naver.com">minho0</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
